third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/eq/non_eq_field.rs
#[derive(derive_more::Eq)]
struct IntOrFloat {
    f: f32,
}

impl PartialEq for IntOrFloat {
    fn eq(&self, _: &Self) -> bool {
        unimplemented!()
    }
}

fn main() {}
